Add postgres installation to ansible playbook

--- a/ansible/webservers.yml
+++ b/ansible/webservers.yml
@@ -6,6 +6,8 @@
     - add_deploy_user
     - ruby_installation
     - nginx_installation
+    - role: geerlingguy.postgresql
+      become: yes
   handlers:
     - name: Restart nginx
       service: name=nginx state=restarted
