--- a/ansible/webservers.yml
+++ b/ansible/webservers.yml
@@ -6,7 +6,8 @@
     - add_deploy_user
     - ruby_installation
     - nginx_installation
-    - imagemagick_installation
+    - role: imagemagick_installation
+      tags: imagemagick
     - role: weareinteractive.environment
       tags: 'envs'
     - role: geerlingguy.postgresql
