Add new commands to deploy

--- a/.semaphore/production-deploy.yml
+++ b/.semaphore/production-deploy.yml
@@ -12,4 +12,5 @@ blocks:
       - name: Deploy
         commands:
           - echo 'Deploying to production!'
-          - cap production deploy
+          - bundle install --path vendor/bundle
+          - bundle exec cap production deploy
