--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -70,9 +70,9 @@ blocks:
         - echo 'Running tests'
 
 promotions:
-  - name: Production deploy
-    pipeline_file: production-deploy.yml
-    auto_promote_on:
-      - result: passed
-        branch: 
-          - master
+  # - name: Production deploy
+  #   pipeline_file: production-deploy.yml
+  #   auto_promote_on:
+  #     - result: passed
+  #       branch: 
+  #         - master
