--- a/config/cloudinary.yml
+++ b/config/cloudinary.yml
@@ -1,3 +1,5 @@
+# might be useful, when cloudinary issue will be fixed: 
+# https://github.com/cloudinary/cloudinary_gem/issues/334
 ---
 development:
   cloud_name: <%= ENV['CLOUDINARY_CLOUD_NAME'] %>
